# notification-service

./: Cargo.toml  GENERATE.md  README.md  rust-toolchain.toml
.github/actions/lowercase/: action.yml
.github/workflows/: build_image.yml  deploy_image.yml  pull_request_validate.yml  release.yml  security_audit.yml
api/: openapi.yaml
api/doc/: README.md
api/doc/.openapi-generator/: FILES
docker/: Dockerfile
docker/fs/: config.json
notification/: Cargo.toml
notification/src/: config.rs  lib.rs  server.rs  services.rs  tracing.rs
notification/src/add/: mod.rs
notification/src/config/: mod.rs
notification/src/server/: api.rs  mod.rs
notification/src/server/api/: mod.rs  notifications.rs  schema.rs  services.rs
notification/src/server/api/default_service/: mod.rs
notification/src/server/api/notifications/: mod.rs
notification/src/server/api/schema/: service_types.rs
notification/src/server/api/schema/service_types/service_type/: config.rs
notification/src/server/api/schema/service_types/type/: config.rs
notification/src/server/api/services/: id.rs
notification/src/server/api/services/id/: config.rs  mod.rs  notifications.rs
notification/src/server/api/services/id/config/: mod.rs  schema.rs
notification/src/server/api/services/id/config/schema/: mod.rs
notification/src/server/api/services/id/notifications/: mod.rs  schema.rs
notification/src/server/api/services/id/notifications/schema/: mod.rs
notification/src/services/: log.rs  mod.rs  smtp.rs
notification/src/services/log/: config.rs  mod.rs
notification/src/services/log/config/: mod.rs
notification/src/services/smtp/: config.rs  mod.rs
notification/src/services/smtp/config/: mod.rs  patch.rs  schema.rs
notification/src/smtp/: mod.rs
notification/src/smtp/config/: mod.rs
notification/src/tracing/: mod.rs
notis/: Cargo.toml
notis/src/: main.rs
notis_server/: .openapi-generator-ignore  Cargo.toml  README.md
notis_server/.openapi-generator/: FILES
notis_server/patches/: 0-unlimited-notification-body-limit.patch
notis_server/src/: models.rs  types.rs
template_bin/: Cargo.toml
template_bin/src/: main.rs
template_lib/: Cargo.toml
(+15 files in other folders)
