[workspace]
members = ["notis", "notification"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["FLECS Technologies GmbH"]
description = "A FLECS app to send notifications with"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tracing-subscriber = "0.3"
tracing = "0.1"
serde_json = "1.0"
serde = "1.0"