[package]
name = "notification"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
lettre = { version = "0.11.17", features = ["default", "serde", "tracing"] }
axum = "0.7"
axum-extra = "0.9"
notis_server = { path = "../notis_server", version = "0.1.0" }