[package]
name = "notis"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
template_lib = { path = "../template_lib", version = "0.1.0" }
axum = "0.8"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }